compiler/parser/src/snapshots/rustpython_parser__context__tests__ann_assign_name.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..10,
        custom: (),
        node: AnnAssign {
            target: Located {
                range: 0..1,
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Store,
                },
            },
            annotation: Located {
                range: 3..6,
                custom: (),
                node: Name {
                    id: "int",
                    ctx: Load,
                },
            },
            value: Some(
                Located {
                    range: 9..10,
                    custom: (),
                    node: Constant {
                        value: Int(
                            1,
                        ),
                        kind: None,
                    },
                },
            ),
            simple: 1,
        },
    },
]
