compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_attribute.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..15,
        custom: (),
        node: Assign {
            targets: [
                Located {
                    range: 0..3,
                    custom: (),
                    node: Attribute {
                        value: Located {
                            range: 0..1,
                            custom: (),
                            node: Name {
                                id: "x",
                                ctx: Load,
                            },
                        },
                        attr: "y",
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                range: 6..15,
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            range: 7..8,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 10..11,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 13..14,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
]
