compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_list_comp.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..26,
        custom: (),
        node: Assign {
            targets: [
                Located {
                    range: 0..1,
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                range: 4..26,
                custom: (),
                node: ListComp {
                    elt: Located {
                        range: 5..6,
                        custom: (),
                        node: Name {
                            id: "y",
                            ctx: Load,
                        },
                    },
                    generators: [
                        Comprehension {
                            target: Located {
                                range: 11..12,
                                custom: (),
                                node: Name {
                                    id: "y",
                                    ctx: Store,
                                },
                            },
                            iter: Located {
                                range: 16..25,
                                custom: (),
                                node: Tuple {
                                    elts: [
                                        Located {
                                            range: 17..18,
                                            custom: (),
                                            node: Constant {
                                                value: Int(
                                                    1,
                                                ),
                                                kind: None,
                                            },
                                        },
                                        Located {
                                            range: 20..21,
                                            custom: (),
                                            node: Constant {
                                                value: Int(
                                                    2,
                                                ),
                                                kind: None,
                                            },
                                        },
                                        Located {
                                            range: 23..24,
                                            custom: (),
                                            node: Constant {
                                                value: Int(
                                                    3,
                                                ),
                                                kind: None,
                                            },
                                        },
                                    ],
                                    ctx: Load,
                                },
                            },
                            ifs: [],
                            is_async: 0,
                        },
                    ],
                },
            },
            type_comment: None,
        },
    },
]
