compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_starred.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..19,
        custom: (),
        node: Assign {
            targets: [
                Located {
                    range: 0..7,
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                range: 1..2,
                                custom: (),
                                node: Name {
                                    id: "x",
                                    ctx: Store,
                                },
                            },
                            Located {
                                range: 4..6,
                                custom: (),
                                node: Starred {
                                    value: Located {
                                        range: 5..6,
                                        custom: (),
                                        node: Name {
                                            id: "y",
                                            ctx: Store,
                                        },
                                    },
                                    ctx: Store,
                                },
                            },
                        ],
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                range: 10..19,
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            range: 11..12,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 14..15,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 17..18,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
]
