compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_subscript.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..16,
        custom: (),
        node: Assign {
            targets: [
                Located {
                    range: 0..4,
                    custom: (),
                    node: Subscript {
                        value: Located {
                            range: 0..1,
                            custom: (),
                            node: Name {
                                id: "x",
                                ctx: Load,
                            },
                        },
                        slice: Located {
                            range: 2..3,
                            custom: (),
                            node: Name {
                                id: "y",
                                ctx: Load,
                            },
                        },
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                range: 7..16,
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            range: 8..9,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 11..12,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 14..15,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
]
