compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_tuple.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..18,
        custom: (),
        node: Assign {
            targets: [
                Located {
                    range: 0..6,
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                range: 1..2,
                                custom: (),
                                node: Name {
                                    id: "x",
                                    ctx: Store,
                                },
                            },
                            Located {
                                range: 4..5,
                                custom: (),
                                node: Name {
                                    id: "y",
                                    ctx: Store,
                                },
                            },
                        ],
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                range: 9..18,
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            range: 10..11,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 13..14,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 16..17,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
]
