compiler/parser/src/snapshots/rustpython_parser__context__tests__aug_assign_attribute.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..16,
        custom: (),
        node: AugAssign {
            target: Located {
                range: 0..3,
                custom: (),
                node: Attribute {
                    value: Located {
                        range: 0..1,
                        custom: (),
                        node: Name {
                            id: "x",
                            ctx: Load,
                        },
                    },
                    attr: "y",
                    ctx: Store,
                },
            },
            op: Add,
            value: Located {
                range: 7..16,
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            range: 8..9,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 11..12,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 14..15,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
        },
    },
]
