compiler/parser/src/snapshots/rustpython_parser__context__tests__aug_assign_name.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..6,
        custom: (),
        node: AugAssign {
            target: Located {
                range: 0..1,
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Store,
                },
            },
            op: Add,
            value: Located {
                range: 5..6,
                custom: (),
                node: Constant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            },
        },
    },
]
