compiler/parser/src/snapshots/rustpython_parser__context__tests__del_attribute.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..7,
        custom: (),
        node: Delete {
            targets: [
                Located {
                    range: 4..7,
                    custom: (),
                    node: Attribute {
                        value: Located {
                            range: 4..5,
                            custom: (),
                            node: Name {
                                id: "x",
                                ctx: Load,
                            },
                        },
                        attr: "y",
                        ctx: Del,
                    },
                },
            ],
        },
    },
]
